--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ input[type="text"]:focus {
   background-color: transparent;
   border: none;
   color: white;
+  cursor: pointer;
 }
 
 /** add new task form */
@@ -79,7 +80,9 @@ input[type="text"].add-input {
   -webkit-box-shadow: 1px 1px 5px darkgray;
   -moz-box-shadow: 1px 1px 5px darkgray;
   box-shadow: 1px 1px 5px darkgray;
+  cursor: pointer;
 }
+
 .add-button:hover {
   background-color: #eeeeee;
 }
@@ -114,10 +117,12 @@ input[type="text"].add-input {
 
 .task-item-content {
   display: flex;
-  justify-content: space-between;
+  justify-content: stretch;
   align-items: stretch;
+  flex-basis: 100%;
 }
 .task-item-controls {
+  flex-grow: 1;
   flex-basis: 50px;
   display: flex;
   align-items: center;
@@ -141,6 +146,7 @@ input[type="text"].add-input {
 
 .task-item-content-center {
   align-self: center;
+  flex-basis: 100%;
 }
 
 input[type="text"].task-item-input {
